Moved the coin container to be positioned according to the same centering logic as the vertical (and removing the translating transition). This fixed the issue where the coin would appear to shift right for the animation.

--- a/components/flipCoinComponent.css
+++ b/components/flipCoinComponent.css
@@ -7,8 +7,7 @@ z-fc .coinContainer {
     width: 210px;
     position: fixed;
     top: calc(50% - 105px);
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: calc(50% - 105px);
     perspective: 1000px;
     background-color: rgba(0,0,150,0.5);
     margin: 0;
